# developer_kickstart_ml_eng

./: classificacao.py  pyproject.toml  test.py
api_creation/: api.py  curl_exemplo.txt  test_api.ipynb
data/: clean_housing.csv  housing.csv
data_handling/: handling.ipynb
model_creation/: training.ipynb
