[tool.poetry]
name = "python-eml"
version = "0.1.0"
description = "Ambiente virtual para projeto ML Engenharia"
authors = ["Sidnei Santiago"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10 <3.11"
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
